---修改充值页面

--- a/jhj-web-user/user/charge/mine-charge-way.html
+++ b/jhj-web-user/user/charge/mine-charge-way.html
@@ -2,9 +2,9 @@
 <div class="pages">
 	<div data-page="mine-charge-way" class="page navbar-fixed" style="background-color: #EFF2F9;">
 		<div class="page-content" style="margin: 0; color: #999;">
-			<span class="fangshiwenzi">信息核对</span>
+			<p class="fangshiwenzi">信息核对</p>
 			<form id="order-view" class="list-block" style="margin: 0 auto!important;">
-				<ul style="background: #fffce8">
+				<ul style="background: #fff">
 					<li>
 						<div class="item-content">
 							<div class="item-inner">
@@ -37,9 +37,9 @@
 					</li>
 				</ul>
 			</form>
-			<span class="fangshiwenzi">支付方式</span>
+			<p class="fangshiwenzi">支付方式</p>
               <div id="order-view" class="list-block chongzhi-qingchu"style="margin:0 auto!important;">
-                <ul style="background:#fffce8">
+                <ul style="background:#fff">
                     <!-- <li>
                       <div class="item-content">
                         <div class="item-inner">
@@ -54,18 +54,18 @@
                       </div>
                     </li> -->
                     <li>
-						<label class="label-checkbox item-content"style="background:#fffce8;">
-							<div class="item-media"><img src="img/icons/weixin.png"style="width:45px;"></div>
+						<label class="label-checkbox item-content"style="background:#fff;">
+							<div class="item-media"><img src="img/dingdan-pay/weixin-pay.png"style="width:30px;margin-left:5px;"></div>
 							<div class="item-inner">
 								<div class="item-title"style="margin-left:-15px;color:#000;">微信支付</div>
 								<input type="hidden"  value="2"/>
-								<img  src="img/icons/duigou-green.png" id="order_pay_type" name="order_pay_type"/> 
+								<img  src="img/dingdan-pay/dingdan-pay1.png" style="width:30px;" id="order_pay_type" name="order_pay_type"/> 
 							</div>
 						</label>
 					</li>
                 </ul>
               </div>
-              <a href="#" class="button active my-submit chongzhi-submit"style="background:#5EA6EE;border:1px solid #5EA6EE;">确认支付</a>
+              <a href="#" class="all-button9 chongzhi-submit"style="background:#5EA6EE;border:1px solid #5EA6EE;">确认支付</a>
 		</div>
 	</div>
 </div>
