--- a/jhj-web-user/user/charge/mine-charge-list.html
+++ b/jhj-web-user/user/charge/mine-charge-list.html
@@ -4,7 +4,7 @@
 	<!-- Page, data-page contains page name-->
 	<div data-page="mine-charge-list" class="page"style="background:#EFF2F9;">
 		<div class="page-content"style="margin-top:5px;height:auto;">
-			<img src="img/minecharge1.jpg" style="width:100%;margin-top:10px;" alt="">
+			<img src="img/minecharge1.jpg" style="width:100%;" alt="">
 			<div class="list-block chongzhi-qingchu"style="margin:25px auto;color:#999;">
                 {{#each data}}
                 <ul class="minecharge">
