---修改深度服务

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -72,7 +72,7 @@
 							</div>
 
 							<div class="mincircle mincircle4">
-								<a href="#" onclick="orderLink('order/fiveservice/qiyefuwu.html', 27)">
+								<a href="order/fiveservice/order-cus-index.html" >
 									<div class="mincircle-one">
 										<p>家务定制</p>
 										<p>家务包年85折优惠</p>
@@ -214,6 +214,10 @@
 	<script type="text/javascript" src="js/order/order-hour-confirm.js"></script>
 	<script type="text/javascript" src="js/order/order-view-0.js"></script>
 	
+	<!-- 深度服务  -->
+	<script type="text/javascript" src="js/order/order-deep-intro.js"></script>
+    <script type="text/javascript" src="js/order/order-deep-choose.js"></script>
+	
 	<!-- 订单 -->
 	<script type="text/javascript" src="js/order/order-list.js"></script>
 	
@@ -248,5 +252,6 @@
     <script type="text/javascript" src="js/order/fiveservice/qiyefuwu.js"></script>
     <!-- 我的 余额  消费明细 -->
     <script type="text/javascript" src="js/user/mine-rest-money-detail.js"></script>
+    
 </body>
 </html>
