--- a/jhj-web-user/order/order-deep-intro.html
+++ b/jhj-web-user/order/order-deep-intro.html
@@ -5,20 +5,15 @@
 			<img src="img/bingxiang/banner.png" alt="" class="all-img">
 			<div class="beijing-index">
 				<div class="shendu-bx">
-					<div class="shendu-bx-yuyue"><div class="all-button">立即预约</div></div>
+					<div class="shendu-bx-yuyue">
+						<a href="order/order-deep-choose.html"><div class="all-button">立即预约</div></a>
+					</div>
 					<div class="shendu-bx-xd" id="serviceAddons">
-						<ul class="shendu-bx-xd1" id="serviceAddons-title">
+						<ul class="shendu-bx-xd1">
 							<li>类别</li>
 							<li>原价</li>
 							<li>折扣价</li>
 						</ul>
-						<!-- {{#each data}}
-						<ul class="shendu-bx-xd11">
-							<li>{{name}}</li>
-							<li>{{price}}</li>
-							<li>{{dis_price}}</li>
-						</ul>
-						{{/each}} -->
 					</div>
 					<div class="shendu-bx-xd2"><a href="user/charge/mine-charge-list.html" class="special-color2">充值立享更多优惠&nbsp;》</a></div>
 				</div>
