---厨娘烧饭页面修改

--- a/jhj-web-user/order/fiveservice/orde-cook-intro.html
+++ b/jhj-web-user/order/fiveservice/orde-cook-intro.html
@@ -1,10 +1,10 @@
 <div class="pages navbar-through toolbar-through">
-    <div data-page="orde-cus-cook" class="page">
+    <div data-page="orde-cook-intro" class="page">
         <div id="indexPageContentDiv" class="page-content">
             <img src="img/jiawubaoyue/chuniang1.png" alt="" class="all-img">
             <div class="beijing-index">
                 <div class="shendu-bx">
-                    <a href="">
+                    <a href="order/order-hour-choose.html?service_type_id=29">
                         <div class="all-button">立即预约</div>
                     </a>
                     <div class="shendu-bx-xd">
