--- a/jhj-web-user/order/fiveservice/order-cus-index.html
+++ b/jhj-web-user/order/fiveservice/order-cus-index.html
@@ -8,16 +8,16 @@
                         <a href="survey/survey-user.html"><div>家务<br>包年</div></a>
                     </li>
                     <li>
-                         <a href="order/fiveservice/hostwork-month.html"><div>家务<br>包月</div></a>
+                         <a href="order/fiveservice/order-cus-hostwork-month.html"><div>家务<br>包月</div></a>
                     </li>
                     <li>
-                        <a href="order/fiveservice/cook.html"><div>厨娘<br>烧饭</div></a>
+                        <a href="order/fiveservice/orde-cook-intro.html"><div>厨娘<br>烧饭</div></a>
                     </li>
                 </ul>
                 <ul class="order-baoyue2">
-                    <li>一键定制</li>
-                    <li>499元</li>
-                    <li>99元</li>
+                     <a href="survey/survey-user.html"><li>一键定制</li></a>
+                    <a href="order/fiveservice/order-cus-hostwork-month.html"><li>499元</li></a>
+                    <a href="order/fiveservice/orde-cook-intro.html"><li>99元</li></a>
                 </ul>
             </div>
         </div>
