--- a/jhj-web-user/order/order-hour-confirm.html
+++ b/jhj-web-user/order/order-hour-confirm.html
@@ -72,7 +72,7 @@
 					</div>
 					<div class="order-xiadan">
 						<ul class="xiadan2">
-							<li class="special-color3" id="orderPayStr">149元</li>
+							<li class="special-color3" id="orderPayStr"></li>
 						</ul>
 						<ul class="xiadan3">
 							<a href="#" id="orderHourSubmit">
