--- a/jhj-web-user/order/order-pay.html
+++ b/jhj-web-user/order/order-pay.html
@@ -49,8 +49,8 @@
 						<li>
 							<img src="img/dingdan-pay/zhifubao-pay.png" alt="">
 						</li>
-						<li>支付宝支付</li>
-						<li>
+						<li style="width:30%">支付宝支付</li>
+						<li style="width:48%">
 							<img id="img-alipay" onclick="changePayType('img-alipay', 1)" src="img/dingdan-pay/dingdan-pay1.png" alt="">
 						</li>
 					</ul>
