--- a/jhj-web-user/survey/survey-user.html
+++ b/jhj-web-user/survey/survey-user.html
@@ -1,5 +1,5 @@
 
-	<div data-page="survey-user-page" class="page"style="background-color:#FDEEEE!important;overflow:auto">
+	<div data-page="survey-user-page" class="page"style="background-color:#EFF2F9!important;overflow:auto">
 	
 		
 		<div class="page-content"style="margin:0;">
@@ -10,13 +10,10 @@
             	<li>立即填写信息</li>
             	<li style="font-size:16px;">免费帮您定制一套专业的家政服务方案</li>
           </ul>
-
-			
-		</div>
-	<form id="survey-user-form"  >
+<form id="survey-user-form"  >
 		<div class="page-content"style="margin:0;">
 			<div style="margin: 0" class="list-block">
-					<ul style="margin-top:15px;background:#fffce8;">
+					<ul style="margin-top:15px;background:#fff;">
 						
 						 <li>
 							<div class="item-content">
@@ -64,7 +61,10 @@
 						</li>
 					</ul>
 				</div>
-			<a href="#" id="submitSurveyUser"  class="button active shendu-submit">下一步</a>
+			<a href="#" id="submitSurveyUser"  class="all-button9 shendu-submit">下一步</a>
 		</div>
 	</div>
  </form>
+			
+		</div>
+	
