---修改包年定制样式

--- a/jhj-web-user/survey/survey-result-price.html
+++ b/jhj-web-user/survey/survey-result-price.html
@@ -1,4 +1,4 @@
-<div data-page="survey-result-price-page" class="page" style="background-color:#FDEEEE!important;overflow:auto">
+<div data-page="survey-result-price-page" class="page" style="background-color:#EFF2F9!important;overflow:auto">
 	
 	<div class="page-content"style="margin:0;">
 		<div style="margin:0" class="list-block">
