--- a/jhj-web-user/survey/survey-success.html
+++ b/jhj-web-user/survey/survey-success.html
@@ -1,4 +1,4 @@
-<div data-page="survey-success-page" class="page"style="background-color:#FDEEEE!important;overflow:auto">
+<div data-page="survey-success-page" class="page"style="background-color:#EFF2F9!important;overflow:auto">
 		<div class="page-content"style="margin:0;">
 			<div class="ddjg-input" style="text-align:center">
                 <img src="./img/icons/duigou-x.jpg" />
