-- 深度保洁下单流程完成

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -217,6 +217,7 @@
 	<!-- 深度服务  -->
 	<script type="text/javascript" src="js/order/order-deep-intro.js"></script>
     <script type="text/javascript" src="js/order/order-deep-choose.js"></script>
+    <script type="text/javascript" src="js/order/order-deep-confirm.js"></script>
 	
 	<!-- 订单 -->
 	<script type="text/javascript" src="js/order/order-list.js"></script>
