--- a/jhj-web-user/order/order-deep-index.html
+++ b/jhj-web-user/order/order-deep-index.html
@@ -8,61 +8,61 @@
                     <p>深度养护</p>
                 </div>
                 <div class="shendu-circle shendu-circle1">
-                    <a href="order/order-deep-intro.html?service_type_id=36">
+                    <a href="order/order-deep-intro.html?service_type_id=36" class="special-color7">
                         <img src="img/shendu/shendu-1.png" alt="">
                         <p>油烟机清洗</p>
                     </a>
                 </div>
                 <div class="shendu-circle shendu-circle1">
-                    <a href="order/order-deep-intro.html?service_type_id=56">
+                    <a href="order/order-deep-intro.html?service_type_id=56" class="special-color7">
                         <img src="img/shendu/shendu-2.png" alt="">
                         <p>新居开荒</p>
                     </a>
                 </div>
                 <div class="shendu-circle shendu-circle1">
-                    <a href="order/order-deep-intro.html?service_type_id=54">
+                    <a href="order/order-deep-intro.html?service_type_id=54" class="special-color7">
                         <img src="img/shendu/shendu-3.png" alt="">
                         <p>擦玻璃</p>
                     </a>
                 </div>
                 <div class="shendu-circle">
-                    <a href="order/order-deep-intro.html?service_type_id=50">
+                    <a href="order/order-deep-intro.html?service_type_id=50" class="special-color7">
                         <img src="img/shendu/shendu-4.png" alt="">
                         <p>冰箱清洗</p>
                     </a>
                 </div>
                 <div class="shendu-circle">
-                    <a href="order/order-deep-intro.html?service_type_id=51">
+                    <a href="order/order-deep-intro.html?service_type_id=51" class="special-color7">
                         <img src="img/shendu/shendu-5.png" alt="">
                         <p>空调清洗</p>
                     </a>
                 </div>
                 <div class="shendu-circle">
-                    <a href="order/order-deep-intro.html?service_type_id=35">
+                    <a href="order/order-deep-intro.html?service_type_id=35" class="special-color7">
                         <img src="img/shendu/shendu-6.png" alt="">
                         <p>厨卫深度清洁</p>
                     </a>
                 </div>
                 <div class="shendu-circle">
-                    <a href="order/order-deep-intro.html?service_type_id=60">
+                    <a href="order/order-deep-intro.html?service_type_id=60" class="special-color7">
                         <img src="img/shendu/shendu-7.png" alt="">
                         <p>洗衣机清洗</p>
                     </a>
                 </div>
                 <div class="shendu-circle">
-                    <a href="order/order-deep-intro.html?service_type_id=34">
+                    <a href="order/order-deep-intro.html?service_type_id=34" class="special-color7">
                         <img src="img/shendu/shendu-8.png" alt="">
                         <p>床品除螨杀菌</p>
                     </a>
                 </div>
                 <div class="shendu-circle">
-                    <a href="order/order-deep-intro.html?service_type_id=53">
+                    <a href="order/order-deep-intro.html?service_type_id=53" class="special-color7">
                         <img src="img/shendu/shendu-9.png" alt="">
                         <p>房屋大扫除</p>
                     </a>
                 </div>
                 <div class="shendu-circle">
-                    <a href="order/order-deep-intro.html?service_type_id=52">
+                    <a href="order/order-deep-intro.html?service_type_id=52" class="special-color7">
                         <img src="img/shendu/shendu-10.png" alt="">
                         <p>地板保养打蜡</p>
                     </a>
