--- a/jhj-web-user/order/order-deep-intro.html
+++ b/jhj-web-user/order/order-deep-intro.html
@@ -6,7 +6,7 @@
 			<div class="beijing-index">
 				<div class="shendu-bx">
 					<div class="shendu-bx-yuyue">
-						<a href="order/order-deep-choose.html"><div class="all-button">立即预约</div></a>
+						<a href="#" id="order-deep-click"><div class="all-button">立即预约</div></a>
 					</div>
 					<div class="shendu-bx-xd" id="serviceAddons">
 						<ul class="shendu-bx-xd1">
