--- a/jhj-web-user/order/order-deep-choose.html
+++ b/jhj-web-user/order/order-deep-choose.html
@@ -1,55 +1,46 @@
 <div class="pages navbar-through toolbar-through">
-    <div data-page="order-deep-choose" class="page">
-        <div id="indexPageContentDiv" class="page-content">
-            <div class="beijing-index">
-                <ul class="order-pay">
-                    <li>选择数量</li>
-                </ul>
-
-                <div class="order-xiadan" id="order-deep-content">
-                    <!-- <ul class="order-rili">
-                        <li>单开门冰箱</li>
-                        <li>
-                            <span>＋</span>
-                            <input type="text" value="0">
-                            <span>－</span>
-                        </li>
-                    </ul> -->
-                    <!-- <ul class="order-rili">
-                        <li>单开门冰箱</li>
-                        <li>
-                            <span>＋</span>
-                            <input type="text" value="0">
-                            <span>－</span>
-                        </li>
-                    </ul>
-                    <ul class="order-rili">
-                        <li>单开门冰箱</li>
-                        <li>
-                            <span>＋</span>
-                            <input type="text" value="0">
-                            <span>－</span>
-                        </li>
-                    </ul> -->
-                    <ul class="order-pay">
-                        <li>选择地址</li>
-                    </ul>
-                    <ul class="xiadan11" style="border:0;">
-                        <li><img src="img/rili/zuobiao.png" alt=""></li>
-                        <li style="width:60%;">
-                            <div style="width:30%;height:60px;float:left;">地址：</div>
-                            <label id="" class="tarea1">汉荣家园</label></li>
-                        <li style="width:20%;"><img src="img/rili/tianxie.png" alt=""></li>
-                    </ul>
-                </div>
-                <ul class="order-pay">
-                    <li>选择上门服务时间</li>
-                </ul>
-                <ul class="chose-time" style="background:#fff;">
-                    <li class="special-color3"></li>
-                    <li><img src="img/rili/zuobiao1.png" alt=""></li>
-                </ul>
-            </div>
-        </div>
-    </div>
+	<div data-page="order-deep-choose" class="page">
+		<div id="indexPageContentDiv" class="page-content">
+			<form id="order-deep-form" autocomplete="off">
+				<input type="hidden" name="serviceType" id="serviceType" value="0">
+				<input type="hidden" id="addrId" name="addrId" value="">
+				<div class="beijing-index">
+					<ul class="order-pay">
+						<li>选择数量</li>
+					</ul>
+					<div class="order-xiadan" id="order-deep-content"></div>
+					<ul class="order-pay">
+						<li>选择地址</li>
+					</ul>
+					<div class="order-xiadan">
+						<ul class="xiadan11" style="border: 0;">
+							<li>
+								<img src="img/rili/zuobiao.png" alt="">
+							</li>
+							<a href="user/mine-addr-list.html" class="special-color7" id="addrSelect">
+								<li style="width: 60%;">
+									<div style="width: 30%; height: 60px; float: left;">地址：</div>
+									<label id="orderChooseAddrName" class="tarea1"></label>
+								</li>
+							</a>
+							<li style="width: 20%;">
+								<img src="img/rili/tianxie.png" alt="">
+							</li>
+						</ul>
+					</div>
+					<ul class="order-pay">
+						<li>选择上门服务时间</li>
+					</ul>
+					<a href="#" id="chooseServiceTime" class="special-color7">
+						<ul class="chose-time" style="background: #fff;">
+							<li class="special-color3"></li>
+							<li>
+								<img src="img/rili/zuobiao1.png" alt="">
+							</li>
+						</ul>
+					</a>
+				</div>
+			</form>
+		</div>
+	</div>
 </div>
