-- 深度养护订单列表及订单详情

--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -36,7 +36,7 @@
 								</a>
 							</div>
 							<div class="mincircle mincircle2">
-								<a href="#" onclick="orderLink('order/fiveservice/cook.html', 24)">
+								<a href="order/order-deep-index.html"">
 									<div class="mincircle-one">
 										<p>深度养护</p>
 										<p>开荒，擦玻璃</p>
@@ -60,7 +60,7 @@
 								</a>
 							</div>
 							<div class="mincircle mincircle4">
-								<a href="#" onclick="orderLink('order/fiveservice/qiyefuwu.html', 27)">
+								<a href="order/fiveservice/order-cus-index.html">
 									<div class="mincircle-one">
 										<p>家务定制</p>
 										<p>家务包年85折优惠</p>
@@ -153,7 +153,6 @@
 			</div>
 		</div>
 	</div>
-	
 	<script type="text/javascript" src="js/framework7.min.js"></script>
 	<script type="text/javascript" src="js/u-lib.min.js"></script>
 	<script type="text/javascript" src="js/u-main.min.js?t=806dffa2"></script>
