----修改请假管理

--- a/jhj-web-user/order/deepIntro/order-deep-intro-35.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-35.html
@@ -32,7 +32,7 @@
         <li><img src="img/chuweixiaodu/chuwei6.png" alt=""></li>
         <li><img src="img/chuweixiaodu/chuwei7.png" alt=""></li>
     </ul>
-    <ul class="order-baoyue-erji-chuwei">
+    <ul class="order-baoyue-erji-chuwei" style="height:80px">
         <li>高温蒸汽机</li>
         <li>吸尘器</li>
         <li>工具箱</li>
