--- a/jhj-web-user/order/deepIntro/order-deep-intro-60.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-60.html
@@ -30,7 +30,7 @@
         <li><img src="img/xiyiji/xiyiji3.png" alt=""></li>
         <li><img src="img/xiyiji/xiyiji4.png" alt=""></li>
     </ul>
-    <ul class="order-baoyue-erji-chuwei">
+    <ul class="order-baoyue-erji-chuwei" style="height:80px">
         <li>专用清洁剂</li>
         <li>高温蒸汽机</li>
         <li>工具箱</li>
