-- 修正深度保洁下单已选数据问题

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -183,6 +183,7 @@
 	<!-- 订单时间选择 -->
 	<script type="text/javascript" src="js/order/order-lib-cal.js"></script>
 	<!-- 金牌保洁 -->
+	<script type="text/javascript" src="js/order/order-hour-intro.js"></script>
 	<script type="text/javascript" src="js/order/order-hour-choose.js"></script>
 	<script type="text/javascript" src="js/order/order-hour-confirm.js"></script>
 	<script type="text/javascript" src="js/order/order-view-0.js"></script>
