---家务包月加链接

--- a/jhj-web-user/order/fiveservice/order-cus-hostwork-month.html
+++ b/jhj-web-user/order/fiveservice/order-cus-hostwork-month.html
@@ -4,7 +4,7 @@
             <img src="img/jiawubaoyue/baoyuebanner1.png" alt="" class="all-img">
             <div class="beijing-index">
                 <div class="shendu-bx">
-                    <a href="">
+                    <a href="order/order-deep-choose.html?service_type_id=61">
                         <div class="all-button">立即预约</div>
                     </a>
                     <div class="shendu-bx-xd">
