---修改基础服务查询条件 ---修改母婴到家

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -82,7 +82,7 @@
 								<p>母婴到家</p>
 							</div>
 							<div class="mincircle mincircle5">
-								<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 25)">
+								<a href="order/order-baby-intro.html">
 									<div class="mincircle-one">
 										<p>孕家洁</p>
 										<p style="color: #999;">为孕妇家庭定制的</p>
@@ -94,7 +94,7 @@
 								</a>
 							</div>
 							<div class="mincircle mincircle6">
-								<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 26)">
+								<a href="order/order-yuezifang-intro.html">
 									<div class="mincircle-one">
 										<p>月子房</p>
 										<p style="color: #999;">孕妇产前</p>
@@ -106,7 +106,7 @@
 								</a>
 							</div>
 							<div class="mincircle mincircle7">
-								<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 26)">
+								<a href="order/order-cleanbaby-intro.html" >
 									<div class="mincircle-one">
 										<p>洁宝宝</p>
 										<p style="color: #999;">0-3岁宝宝家庭</p>
@@ -118,7 +118,7 @@
 								</a>
 							</div>
 							<div class="mincircle mincircle8">
-								<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 26)">
+								<a href="order/order-anjubao-intro.html">
 									<div class="mincircle-one">
 										<p>安居宝</p>
 										<p style="color: #999;">儿童安全防护</p>
@@ -192,6 +192,8 @@
 	<script type="text/javascript" src="js/order/order-deep-choose.js"></script>
 	<script type="text/javascript" src="js/order/order-deep-confirm.js"></script>
 	<script type="text/javascript" src="js/order/order-view-1.js"></script>
+	<!-- 母婴到家 -->
+	<script type="text/javascript" src="js/order/order-baby-intro.js"></script>
 	<!-- 订单 -->
 	<script type="text/javascript" src="js/order/order-list.js"></script>
 	<!-- 支付 -->
