-- 相应需要更新index1.html

--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -6,11 +6,9 @@
 	content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
-
 <title>叮当到家</title>
 <link rel="stylesheet" href="css/framework7.ios.min.css">
 <link rel="stylesheet" href="css/mobiscroll.custom-2.16.1.min.css">
@@ -81,7 +79,7 @@
 								<p>母婴到家</p>
 							</div>
 							<div class="mincircle mincircle5">
-								<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 25)">
+								<a href="order/order-baby-intro.html">
 									<div class="mincircle-one">
 										<p>孕家洁</p>
 										<p style="color: #999;">为孕妇家庭定制的</p>
@@ -93,7 +91,7 @@
 								</a>
 							</div>
 							<div class="mincircle mincircle6">
-								<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 26)">
+								<a href="order/order-yuezifang-intro.html">
 									<div class="mincircle-one">
 										<p>月子房</p>
 										<p style="color: #999;">孕妇产前</p>
@@ -105,7 +103,7 @@
 								</a>
 							</div>
 							<div class="mincircle mincircle7">
-								<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 26)">
+								<a href="order/order-cleanbaby-intro.html">
 									<div class="mincircle-one">
 										<p>洁宝宝</p>
 										<p style="color: #999;">0-3岁宝宝家庭</p>
@@ -117,7 +115,7 @@
 								</a>
 							</div>
 							<div class="mincircle mincircle8">
-								<a href="#" onclick="orderLink('order/fiveservice/tiexinjiashi.html', 26)">
+								<a href="order/order-anjubao-intro.html">
 									<div class="mincircle-one">
 										<p>安居宝</p>
 										<p style="color: #999;">儿童安全防护</p>
