---母婴到家修改，订单模块修改小bug

--- a/jhj-web-user/html/order-dingdan-chajia.html
+++ b/jhj-web-user/html/order-dingdan-chajia.html
@@ -44,6 +44,7 @@
 								</ul>
 								<div class="all-button1" style="background:#FDD855;margin-top:40px;">确认支付</div>
 								<!-- <img src="../img/bujiaochajia/xian.png" alt="" class="all-img"> -->
+								<div style="clear:both;height:15px;"></div>
 							</div>
 							
 						</div>
