--- a/jhj-web-user/html/order-yuezifang.html
+++ b/jhj-web-user/html/order-yuezifang.html
@@ -28,6 +28,22 @@
 						<div class="beijing-index">
 							<div style="width:100%;">
 								<img src="../img/yuezifang/1.jpg" alt="" class="all-img">
+								<div class="shendu-bx">
+									<a href="order-pay-rili.html"><div class="all-button">立即预约</div></a>
+									<div class="shendu-bx-xd">
+										<ul class="shendu-bx-xd1">
+											<li>类别</li>
+											<li>原价</li>
+											<li>折扣价</li>
+										</ul>
+										
+										<ul class="shendu-bx-xd11">
+											<li>金牌保洁</li>
+											<li>199元/3小时</li>
+											<li>149元/3小时</li>
+										</ul>
+									</div>
+								</div>
 								<img src="../img/yuezifang/2.jpg" alt="" class="all-img5">
 								<img src="../img/yuezifang/3.jpg" alt="" class="all-img5">
 								<img src="../img/yuezifang/4.jpg" alt="" class="all-img5">
