--- a/jhj-web-user/html/order-dingdan-list.html
+++ b/jhj-web-user/html/order-dingdan-list.html
@@ -43,7 +43,7 @@
 									</ul>
 									<ul class="dingdan">
 										<li>上门地址：</li>
-										<li>北京市海淀区汉荣家园2号楼</li>
+										<li>北京市海淀区汉荣家园2号楼111111111111111111111</li>
 									</ul>
 									<ul class="dingdan">
 										<li>订单金额：</li>
@@ -51,6 +51,7 @@
 									</ul>
 									<div class="all-button3">补交差价</div>
 									<div class="all-button4">联系客服</div>
+									<div style="clear:both;"></div>
 								</div>
 							</div>
 						</div>
