---订单补交差价修改

--- a/jhj-web-user/html/order-dingdan-chajia.html
+++ b/jhj-web-user/html/order-dingdan-chajia.html
@@ -36,7 +36,7 @@
 								</ul>
 								<ul class="order-dingdan-chajia1">
 									<li>金额：</li>
-									<li>120元</li>
+									<li style="width:45%;"><input type="num" value="199"></li>
 								</ul>
 								<ul class="order-dingdan-chajia1">
 									<li>服务员：</li>
