--- a/jhj-web-user/order/order-anjubao-intro.html
+++ b/jhj-web-user/order/order-anjubao-intro.html
@@ -3,6 +3,26 @@
         <div id="indexPageContentDiv" class="page-content">
             <div class="beijing-index">
                 <a href="order/order-deep-choose.html?service_type_id=65"><img src="img/anjubao/1.jpg" alt="" class="all-img"></a>
+                <div class="shendu-bx">
+									<a href="order/order-deep-choose.html?service_type_id=65"><div class="all-button">立即预约</div>
+								<div class="shendu-bx-xd">
+									<ul class="shendu-bx-xd1">
+										<li>类别</li>
+										<li>原价</li>
+										<li>折扣价</li>
+									</ul>
+									<ul class="shendu-bx-xd11">
+										<li>设计方案</li>
+										<li>299元/次</li>
+										<li>220元/次</li>
+									</ul>
+									<ul class="shendu-bx-xd11">
+										<li>施工费</li>
+										<li>199元/次</li>
+										<li>150元/次</li>
+									</ul>
+								</div>
+							</div>
                 <img src="img/anjubao/2.jpg" alt="" class="all-img5">
                 <img src="img/anjubao/3.jpg" alt="" class="all-img5">
                 <img src="img/anjubao/4.jpg" alt="" class="all-img5">
