--- a/jhj-web-user/order/order-baby-intro.html
+++ b/jhj-web-user/order/order-baby-intro.html
@@ -7,7 +7,22 @@
                     <div class="main-yunfu-mukuai">
                         <div class="main-yunfu-mukuai1">
                             <img src="img/yunfu/2.png" alt="">
-                            <a href="order/order-deep-choose.html?service_type_id=63"><div class="all-button">立即预约</div></a>
+                            <!-- <a href="order/order-deep-choose.html?service_type_id=63"><div class="all-button">立即预约</div></a> -->
+                            <div class="shendu-bx">
+								<a href="order/order-deep-choose.html?service_type_id=63"><div class="all-button">立即预约</div>
+								<div class="shendu-bx-xd">
+									<ul class="shendu-bx-xd1">
+										<li>类别</li>
+										<li>原价</li>
+										<li>折扣价</li>
+									</ul>
+									<ul class="shendu-bx-xd11">
+										<li>孕家洁</li>
+										<li>999元/次</li>
+										<li>699元/次</li>
+									</ul>
+								</div>
+							</div>
                             <ul class="main-yunfu-mukuai11">
                                 <li><img src="img/yunfu/3.png" alt=""></li>
                                 <li>
