--- a/jhj-web-user/order/order-cleanbaby-intro.html
+++ b/jhj-web-user/order/order-cleanbaby-intro.html
@@ -2,7 +2,22 @@
     <div data-page="order-cleanbaby-intro" class="page">
         <div id="indexPageContentDiv" class="page-content">
             <div class="beijing-index">
-                <a href="order/order-deep-choose.html?service_type_id=64"><img src="img/jiebaobao/1.jpg" alt="" class="all-img"></a>
+                <img src="img/jiebaobao/1.jpg" alt="" class="all-img">
+                 <div class="shendu-bx">
+									<a href="order/order-deep-choose.html?service_type_id=64"><div class="all-button">立即预约</div>
+								<div class="shendu-bx-xd">
+									<ul class="shendu-bx-xd1">
+										<li>类别</li>
+										<li>原价</li>
+										<li>折扣价</li>
+									</ul>
+									<ul class="shendu-bx-xd11">
+										<li>洁宝宝</li>
+										<li>399元/次</li>
+										<li>299元/次</li>
+									</ul>
+								</div>
+							</div>
                 <img src="img/jiebaobao/2.jpg" alt="" class="all-img5">
                 <img src="img/jiebaobao/3.jpg" alt="" class="all-img5">
                 <img src="img/jiebaobao/4.jpg" alt="" class="all-img5">
