--- a/jhj-web-user/order/order-deep-intro.html
+++ b/jhj-web-user/order/order-deep-intro.html
@@ -2,7 +2,7 @@
 <div class="pages navbar-through toolbar-through">
 	<div data-page="order-deep-intro" class="page">
 		<div id="indexPageContentDiv" class="page-content">
-			<img src="img/bingxiang/banner.png" alt="" class="all-img">
+			<img src="#" alt="" class="all-img" id="order-deep-img">
 			<div class="beijing-index">
 				<div class="shendu-bx">
 					<div class="shendu-bx-yuyue">
