--- a/jhj-web-user/order/order-yuezifang-intro.html
+++ b/jhj-web-user/order/order-yuezifang-intro.html
@@ -4,7 +4,23 @@
             <div class="beijing-index">
                 <div style="width:100%;">
                     <img src="img/yuezifang/1.jpg" alt="" class="all-img">
-                    <a href="order/order-deep-choose.html?service_type_id=62"><img src="img/yuezifang/2.jpg" alt="" class="all-img5"></a>
+                    
+                   <div class="shendu-bx">
+								<a href="order/order-deep-choose.html?service_type_id=62"><div class="all-button">立即预约</div>
+								<div class="shendu-bx-xd">
+									<ul class="shendu-bx-xd1">
+										<li>类别</li>
+										<li>原价</li>
+										<li>折扣价</li>
+									</ul>
+									<ul class="shendu-bx-xd11">
+										<li>月子房</li>
+										<li>399元/每次</li>
+										<li>299元/每次</li>
+									</ul>
+								</div>
+							</div>
+					<img src="img/yuezifang/2.jpg" alt="" class="all-img5">
                     <img src="img/yuezifang/3.jpg" alt="" class="all-img5">
                     <img src="img/yuezifang/4.jpg" alt="" class="all-img5">
                     <img src="img/yuezifang/5.jpg" alt="" class="all-img5">
