-- 增加订单补差价功能

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -214,6 +214,7 @@
 	<!-- 支付 -->
 	<script type="text/javascript" src="js/order/order-pay.js"></script>
 	<script type="text/javascript" src="js/order/order-pay-success.js"></script>
+	<script type="text/javascript" src="js/order/order-pay-ext.js"></script>
 	<!-- 用户兑换优惠券 -->
 	<script type="text/javascript" src="js/user/user-coupons.js"></script>
 	<!-- 用户充值列表 -->
