--- a/jhj-web-user/order/order-view-1.html
+++ b/jhj-web-user/order/order-view-1.html
@@ -61,7 +61,7 @@
 						</li>
 						<li>留言</li>
 						<li>
-							<textarea name="remarks" id="remarks" class="tarea" ><{{remarks}}/textarea>
+							<textarea name="remarks" id="remarks" class="tarea" >{{remarks}}</textarea>
 						</li>
 					</ul>
 				</div>
