--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -33,7 +33,7 @@
 								<a href="order/order-hour-intro.html">
 									<div class="mincircle-one">
 										<p>金牌保洁</p>
-										<p>首单立减30元</p>
+										<p>首单立减10元</p>
 										<p></p>
 									</div>
 									<div class="mincircle-two">
@@ -42,7 +42,7 @@
 								</a>
 							</div>
 							<div class="mincircle mincircle2">
-								<a href="order/order-deep-index.html"">
+								<a href="order/order-deep-index.html">
 									<div class="mincircle-one">
 										<p>深度养护</p>
 										<p>开荒，擦玻璃</p>
