---老年到家页面

--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -69,7 +69,7 @@
 								
 							</div>
 							<div class="mincircle mincircle3">
-								<a href="survey/survey-user.html">
+								<a href="order/order-old-people.html">
 									<div class="mincircle-one">
 										<p style="margin-bottom:0;">养老护工</p>
 										<p style="color:#000;">贴心家事</p>
